# GoIT_Team_3_WEB

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
app/database/models/: __init__.py  image_comments.py  image_formats.py  image_raiting.py  images.py  tags.py  users.py
app/repository/: comments.py  image_formats.py  image_ratings.py  images.py  tags.py  users.py
app/routes/: __init__.py  auth.py  image_comments.py  image_formats.py  image_ratings.py  images.py  tags.py  users.py
app/routes/docs/: images.py
app/schemas/: core.py  image.py  image_comments.py  image_formats.py  image_raitings.py  tag.py  token.py  user.py
app/services/: auth.py  email.py  gravatar.py
app/utils/: filters.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 7db350d87f4a_init.py  84935f0384c8_update_rating.py
tests/: conftest.py  test_repository_image_formats.py  test_rote_root.py  test_route_auth.py  test_route_images.py  test_route_users.py  test_unit_repository_comments.py  test_unit_repository_users.py
